# swiggy-instaorder-ai

./: AGENTS.md  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  mock_swiggy_tools.py  swiggy_mcp_adapter.py  swiggy_mcp_client.py
backend/app/api/routes/: assistant.py  cart.py  food.py  health.py  instamart.py  orders.py
backend/app/core/: config.py  security.py
backend/app/data/: mock_food.json  mock_instamart.json
backend/app/models/: cart.py  requests.py  responses.py
backend/app/services/: cart_service.py  intent_service.py  order_service.py  policy_service.py  search_service.py
backend/tests/: test_api_routes.py  test_cart_service.py  test_mcp_adapter.py  test_mock_tools.py  test_policy_service.py
docs/: architecture.md  roadmap.md  security-and-privacy.md
